--- a/hackaton/package.json
+++ b/hackaton/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tavily/core": "^0.5.12",
     "next": "15.5.6",
+    "nodemailer": "^6.9.8",
     "openai": "^6.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
@@ -20,6 +21,7 @@
     "@biomejs/biome": "2.2.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9.38.0",
