--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tavily/core": "^0.5.12",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
     "openai": "^6.5.0",
