--- a/hackaton/package.json
+++ b/hackaton/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@tavily/core": "^0.5.12",
+    "lucide-react": "^0.546.0",
     "next": "15.5.6",
     "nodemailer": "^6.9.8",
     "openai": "^6.5.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
